# rust_bpc_prp

./: .gitignore  Cargo.toml
src/: controller.rs  dashboard.rs  lib.rs  line_estimator.rs  main.rs  motion_model.rs  motor_ramp_generator.rs  nmea.rs  primitives.rs  psd_controller.rs  robot.rs  sensor_model.rs
src/message_factory/: mod.rs
src/nmea/: mod.rs
