[package]
name = "adash_bpc_prp"
version = "0.1.0"
authors = ["Adam <adam.ligocki@vutbr.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer = "0.2.0"
chrono = "0.4"
termion = "1.5.6"
rosrust = "0.9"
rosrust_msg = "0.1"